# Eyebrow

./: .gitignore  README.md  benchmark.csv  pyproject.toml
scripts/: plot_benchmarks.py
src/studyvault/: benchmark.py
src/studyvault/controllers/: main_controller.py
src/studyvault/services/: import_service.py
src/studyvault/utils/: file_util.py
tests/: conftest.py  test_models.py
