[project]
name = "studyvault"
version = "1.0.0"
description = "Desktop app for organizing student study materials with intelligent search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt6>=6.10.0",
    "pywin32>=312",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.14.2",
]
